[tool.poetry]
name = "world4youapi"
version = "0.1.0"
description = "An API for World4You DNS Services"
authors = []

[tool.poetry.scripts]
world4you = "world4youapi.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
